--- a/Planning_Projection/nbproject/project.properties
+++ b/Planning_Projection/nbproject/project.properties
@@ -31,13 +31,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jfoenix-8.0.1.jar=C:\\Users\\Asus\\Downloads\\jfoenix-8.0.1.jar
+file.reference.ojdbc8.jar=D:\\Mohamed Dossier Scolaire\\JDBC\\TdBdJava1_lib\\ojdbc8.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.jfoenix-8.0.1.jar}
+    ${file.reference.jfoenix-8.0.1.jar}:\
+    ${file.reference.ojdbc8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -80,7 +82,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=planning_projection.Planning_Projection
+javafx.main.class=planning_projection.vue.Planning_Projection
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
