--- a/Planning_Projection/nbproject/project.properties
+++ b/Planning_Projection/nbproject/project.properties
@@ -41,7 +41,8 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.jfoenix-8.0.1.jar}:\
     ${file.reference.ojdbc8.jar}:\
-    ${file.reference.ojdbc8.jar-1}
+    ${file.reference.ojdbc8.jar-1}:\
+    ${libs.junit_4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -51,7 +52,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
