--- a/Planning_Projection/nbproject/project.properties
+++ b/Planning_Projection/nbproject/project.properties
@@ -31,7 +31,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jfoenix-8.0.1.jar=C:\\Users\\Asus\\Downloads\\jfoenix-8.0.1.jar
-file.reference.ojdbc8.jar=D:\\Mohamed Dossier Scolaire\\JDBC\\TdBdJava1_lib\\ojdbc8.jar
+file.reference.ojdbc8.jar=D:\\Mohamed Dossier Scolaire\\Java\\ojdbc8.jar
 file.reference.ojdbc8.jar-1=..\\..\\..\\..\\..\\Downloads\\ojdbc8.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -40,9 +40,9 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.jfoenix-8.0.1.jar}:\
-    ${file.reference.ojdbc8.jar}:\
     ${file.reference.ojdbc8.jar-1}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.ojdbc8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
