Modification BD (passage myphpadmin) et Commencement de la TableView

--- a/Planning_Projection/nbproject/project.properties
+++ b/Planning_Projection/nbproject/project.properties
@@ -30,9 +30,8 @@ dist.jar=${dist.dir}/Planning_Projection.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.com.mysql.jdbc_5.1.5.jar=..\\com.mysql.jdbc_5.1.5.jar
 file.reference.jfoenix-8.0.1.jar=C:\\Users\\Asus\\Downloads\\jfoenix-8.0.1.jar
-file.reference.ojdbc8.jar=D:\\Mohamed Dossier Scolaire\\Java\\ojdbc8.jar
-file.reference.ojdbc8.jar-1=..\\..\\..\\..\\..\\Downloads\\ojdbc8.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -40,9 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.jfoenix-8.0.1.jar}:\
-    ${file.reference.ojdbc8.jar-1}:\
     ${libs.junit_4.classpath}:\
-    ${file.reference.ojdbc8.jar}
+    ${file.reference.com.mysql.jdbc_5.1.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
