--- a/Planning_Projection/nbproject/project.properties
+++ b/Planning_Projection/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -31,19 +30,20 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.com.mysql.jdbc_5.1.5.jar=..\\com.mysql.jdbc_5.1.5.jar
-file.reference.jfoenix-8.0.1.jar=C:\\Users\\Asus\\Downloads\\jfoenix-8.0.1.jar
+file.reference.jfoenix-8.0.1.jar-1=C:\\Users\\Admin\\Downloads\\jfoenix-8.0.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.jfoenix-8.0.1.jar}:\
     ${libs.junit_4.classpath}:\
-    ${file.reference.com.mysql.jdbc_5.1.5.jar}
+    ${file.reference.com.mysql.jdbc_5.1.5.jar}:\
+    ${file.reference.jfoenix-8.0.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -107,6 +107,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
