--- a/Planning_Projection/nbproject/project.properties
+++ b/Planning_Projection/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.com.mysql.jdbc_5.1.5.jar=..\\com.mysql.jdbc_5.1.5.jar
+file.reference.jfoenix-8.0.1.jar=C:\\Users\\Asus\\Downloads\\jfoenix-8.0.1.jar
 file.reference.jfoenix-8.0.1.jar-1=C:\\Users\\Admin\\Downloads\\jfoenix-8.0.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -39,7 +40,8 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.junit_4.classpath}:\
     ${file.reference.com.mysql.jdbc_5.1.5.jar}:\
-    ${file.reference.jfoenix-8.0.1.jar-1}
+    ${file.reference.jfoenix-8.0.1.jar-1}:\
+    ${file.reference.jfoenix-8.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
